<resources>
    <string name="app_name" translatable="false">PSIA PKOC Credential App</string>
    <string name="BTconnFail">Connection Failed</string>
    <string name="BTConnected">Connected to Device: </string>
    <string name="sBTdevNF">"Bluetooth device not found!"</string>
    <string name="sBTstaNF">Status: Bluetooth not found</string>
    <string name="BTEnable">Bluetooth enabled</string>
    <string name="sBTturON">Bluetooth turned on</string>
    <string name="BTisON">Bluetooth is already on</string>
    <string name="sEnabled">Enabled</string>
    <string name="sDisabled">Disabled</string>
    <string name="sBTdisabl">Bluetooth disabled</string>
    <string name="BTnotOn">Bluetooth not on</string>
    <string name="LocationNotOn">Location services are disabled</string>
    <string name="lt_bluetooth_status">Bluetooth status</string>
    <string name="BTturOff">Bluetooth turned off</string>
    <string name="cConnet">Connecting…</string>
    <string name="DisStart">Discovery started</string>
    <string name="show_paired_devices">Show Paired Devices</string>
    <string name="DisStop">Discovery stopped</string>
    <string name="status">"Status: "</string>
    <string name="discover_new_devices">Discover new device</string>
    <string name="stop_discovery">Stop discovery</string>
    <string name="elatec_GmbH" translatable="false">Elatec GmbH</string>
    <string name="lock_image">Lock Image</string>
    <string name="uncompressed">Normal Flow</string>

    <string name="settings">Settings</string>
    <string name="auto_discover_devices">Auto Discover Devices</string>
    <string name="enable_ranging">Enable Ranging</string>
    <string name="unlock_range">Unlock Range</string>
    <string name="about">About</string>
    <string name="about_content">This application was developed by Johnson Controls International (Thank you to Luke Ruter!) in conjunction with ELATEC Inc. (Jason Ouellette) and the Physical Security Interoperability Alliance members.</string>
    <string name="about_PKOC">PKOC (Public Key Open Credential) is an open standard that uses an asymmetric encryption key as an access control credential.</string>
    <string name="about_version">version: BLE-3.0, NFC-1.63</string>
    <string name="psia" translatable="false">PSIA</string>
    <string name="pkoc_flow_mode">PKOC Flow Setting</string>
    <string name="discovery_and_connection_settings">Discovery and Connection Settings</string>
    <string name="near">near</string>
    <string name="far">far</string>
    <string name="display_settings">Display Settings</string>
    <string name="display_device_mac_address">Display Device MAC Address</string>
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="echde_perfect_secrecy">ECDHE Perfect Secrecy</string>
    <string name="nfc_tech_list">nfc_tech_list</string>
    <string name="servicedesc">PKOC NFC Service</string>
    <string name="aiddescription">AID group</string>
    <string name="near_field_communication">Near-Field Communication</string>
    <string name="bluetooth_low_energy">Bluetooth Low Energy</string>
    <string name="this_image_is_a_closed_door">This image is a closed door.</string>
    <string name="please_present_device_to_reader_to_unlock">Please present device to reader to unlock.</string>
    <string name="select_a_transmission_mechanism">Select a Transmission Mechanism</string>
    <string name="enable_nfc">Enable NFC</string>
    <string name="nfc_is_disabled_please_enable_it_if_you_intend_to_use_nfc_to_transmit_credentials">NFC is disabled. Please enable it if you intend to use NFC to transmit credentials.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="copy_key">Copy Key</string>
    <string name="public_key_qr_code">Public Key QR Code</string>
    <string name="display_qr_public_key">Display QR Public Key</string>
    <string name="enter_site_ephemeral_public_key_in_uncompressed_format">Enter Site Ephemeral Public Key In Uncompressed Format</string>
    <string name="site_full_ephemeral_public_key_64_bytes">Site Full Ephemeral Public Key (64 bytes)</string>
    <string name="enter_reader_identifier_uuid">Enter Reader Identifier UUID</string>
    <string name="reader_identifier_16_bytes_uuid">Reader Identifier (16 bytes UUID)</string>
    <string name="enter_site_identifier_uuid">Enter Site Identifier UUID</string>
    <string name="site_identifier_16_bytes_uuid">Site Identifier (16 bytes UUID)</string>
    <string name="data_management">Manage Data</string>

    <string-array name="key_options">
        <item>Full Public Key</item>
        <item>64-bit</item>
        <item>128-bit</item>
        <item>256-bit</item>
    </string-array>

</resources>
