<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.psia.pkoc.MainActivity.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_DisplayPK"
        android:orderInCategory="102"
        android:title="@string/display_qr_public_key"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_data_management"
        android:orderInCategory="103"
        android:title="@string/data_management"
        app:showAsAction="never" />
</menu>