<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_transmission_mechanism" />

            <RadioGroup
                android:id="@+id/TransmissionRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/NfcButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/near_field_communication" />

                <RadioButton
                    android:id="@+id/BleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:text="@string/bluetooth_low_energy" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/BleSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pkoc_flow_mode" />

                <RadioGroup
                    android:id="@+id/RadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/UncompressedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/uncompressed" />

                    <RadioButton
                        android:id="@+id/ECHDE_Complete"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:enabled="true"
                        android:text="@string/echde_perfect_secrecy" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discovery_and_connection_settings"
                    android:layout_marginBottom="4dp"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/auto_discover_switch"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_discover_devices"
                    android:gravity="start"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/enable_ranging_switch"
                    android:layout_marginTop="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_ranging"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/ranging_slider_label"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/unlock_range"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ranging_slider_label_near"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/near"/>

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:layout_marginTop="8dp"
                        android:id="@+id/ranging_slider"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:max="10"
                        android:progress="0"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:minHeight="6dip"
                        android:maxHeight="6dip" />

                    <TextView
                        android:id="@+id/ranging_slider_label_far"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/far"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display_settings" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/display_mac_switch"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display_device_mac_address"
                    android:gravity="start"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>