<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_text"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logo_square_elatec"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="?attr/isLightTheme"
                        android:contentDescription="@string/elatec_GmbH"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_launcher" />

                    <ImageView
                        android:id="@+id/logo_square_psia"
                        android:scaleType="fitCenter"
                        android:padding="12dp"
                        android:contentDescription="@string/psia"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="?attr/isLightTheme"
                        android:src="@mipmap/psia"
                        />

                </LinearLayout>

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_PKOC" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_version"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>